--- a/index.html
+++ b/index.html
@@ -88,12 +88,57 @@
                         </tr>
                         <!-- END of HEADER -->
 
+                         <!-- START of FIRST ARTICLE -->
+                         <tr>
+                            <td align="center" style="padding: 0 24px">
+                                <img width="600"  src="https://i.ibb.co/DfHPYwH/image-2.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 600px;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="width: 552px; padding: 16px 24px 48px 24px;">
+                                <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%;">
+                                    <tr>
+                                        <td>
+                                            <p  style="margin: 0; padding: 0; font-size: 16px; line-height: 24px; font-weight: bold; letter-spacing: 3px; color: #D90429;">POLITICS</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding: 8px 0;">
+                                            <h1 style="margin: 0; padding: 0; font-size: 28px; line-height: 40px; font-weight: bold;">DeSantis Makes Endorsement In Key Senate Race</h1>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding-bottom: 24px">
+                                            <p  style="margin: 0; padding: 0; font-size: 18px; line-height: 32px;">On Thursday, Florida GOP Governor Ron DeSantis endorsed New Hampshire GOP senatorial candidate General Don Bolduc, who is in a neck-and-neck battle with incumbent Democratic Senator Maggie Hassan.</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <!--[if mso]>
+                                                    <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:56px;v-text-anchor:middle; width:568px;" arcsize="18%" stroke="f" fillcolor="#2B2D42">
+                                                        <w:anchorlock/>
+                                                        <center>
+                                                <![endif]-->
+                                                        <a href="http://" style="font-size: 16px; line-height:56px; font-weight:bold; letter-spacing: 2px; color:#EDF2F4; background-color:#2B2D42; display: inline-block; text-align:center; text-decoration:none; width: 100%;-webkit-text-size-adjust:none;">READ MORE</a>
+                                                <!--[if mso]>
+                                                        </center>
+                                                    </v:roundrect>
+                                                <![endif]-->
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- END of FIRST ARTICLE -->
+
                         
 
                         <!-- SPACER -->
-                        <tr>
-                            <td height="1200" style="font-size:88px; line-height: 88px;">&nbsp;</td>
-                        </tr>
+                        <!-- <tr>
+                            <td height="88" style="font-size:88px; line-height: 88px;">&nbsp;</td>
+                        </tr> -->
                     </table>
                 </td>
             </tr>
