--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 .darkmode-header { background-color: #2B2D42 !important;}
 
                 /* Custom Dark Mode Font Colors */
-                h1, h2, p, span, a, b { color: #EDF2F4 !important; }
+                h1, h2, p, a, b { color: #EDF2F4 !important; }
                     
                 /* Custom Dark Mode Text Link Color */
                 .link { color: #EDF2F4 !important; }
@@ -91,7 +91,7 @@
                          <!-- START of FIRST ARTICLE -->
                          <tr>
                             <td align="center" style="padding: 0 24px">
-                                <img width="600"  src="https://i.ibb.co/DfHPYwH/image-2.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 600px;">
+                                <img width="600"  src="https://i.ibb.co/n1wBTFY/punisher.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 600px;">
                             </td>
                         </tr>
                         <tr>
@@ -99,17 +99,17 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%;">
                                     <tr>
                                         <td>
-                                            <p  style="margin: 0; padding: 0; font-size: 16px; line-height: 24px; font-weight: bold; letter-spacing: 3px; color: #D90429;">POLITICS</p>
+                                            <span  style="margin: 0; padding: 0; font-size: 16px; line-height: 24px; font-weight: bold; letter-spacing: 3px; color: #D90429;">ENTERTAINMENT</span>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td style="padding: 8px 0;">
-                                            <h1 style="margin: 0; padding: 0; font-size: 28px; line-height: 40px; font-weight: bold;">DeSantis Makes Endorsement In Key Senate Race</h1>
+                                            <h1 style="margin: 0; padding: 0; font-size: 28px; line-height: 40px; font-weight: bold;">The Punisher Season 3: Will we see another season?</h1>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td style="padding-bottom: 24px">
-                                            <p  style="margin: 0; padding: 0; font-size: 18px; line-height: 32px;">On Thursday, Florida GOP Governor Ron DeSantis endorsed New Hampshire GOP senatorial candidate General Don Bolduc, who is in a neck-and-neck battle with incumbent Democratic Senator Maggie Hassan.</p>
+                                            <p  style="margin: 0; padding: 0; font-size: 18px; line-height: 32px;">There has still been no news of a third season of The Punisher, despite rumours of it being unveiled at the D23 expo that happened earlier this year.</p>
                                         </td>
                                     </tr>
                                     <tr>
@@ -120,7 +120,7 @@
                                                         <w:anchorlock/>
                                                         <center>
                                                 <![endif]-->
-                                                        <a href="http://" style="font-size: 16px; line-height:56px; font-weight:bold; letter-spacing: 2px; color:#EDF2F4; background-color:#2B2D42; display: inline-block; text-align:center; text-decoration:none; width: 100%;-webkit-text-size-adjust:none;">READ MORE</a>
+                                                        <a href="https://www.videogamer.com/news/the-punisher-season-3-predicted-release-date-leaks/" target="_blank" style="font-size: 16px; line-height:56px; font-weight:bold; letter-spacing: 2px; color:#EDF2F4; background-color:#2B2D42; display: inline-block; text-align:center; text-decoration:none; width: 100%;-webkit-text-size-adjust:none;">READ MORE</a>
                                                 <!--[if mso]>
                                                         </center>
                                                     </v:roundrect>
