--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 color-scheme:            light dark;
                 supported-color-schemes: light dark;
             }
-
             @media (prefers-color-scheme: dark) {
                  /* Shows Dark Mode-Only Content, Like Images */
                 .dark-img { display:block !important; width: auto !important; overflow: visible !important; float: none !important; max-height:inherit !important; max-width:inherit !important; line-height: auto !important; margin-top:0px !important; visibility:inherit !important; }
@@ -37,7 +36,7 @@
                 .darkmode-light { background-color: #17192E !important; }
 
                 /* Custom Dark Mode Background Header Color */
-                .darkmode-header { background-color: #2B2D42 !important;}
+                .darkmode-btn { background-color: #EDF2F4 !important; color: #17192E !important;}
 
                 /* Custom Dark Mode Font Colors */
                 h1, h2, p, a, b { color: #EDF2F4 !important; }
@@ -74,7 +73,6 @@
             <tr>
                 <td style="padding: 40px 0;">
                     <table class="darkmode-light" role="presentation" align="center" border="0" cellpadding="0" cellspacing="0" style="background-color: #FFFFFF;">
-
                         <!-- START of HEADER -->
                         <tr>
                             <td align="left" style="width: 552px; height: 88px; padding: 0 24px;">
@@ -91,7 +89,7 @@
                          <!-- START of FIRST ARTICLE -->
                          <tr>
                             <td align="center" style="padding: 0 24px">
-                                <img width="600"  src="https://i.ibb.co/n1wBTFY/punisher.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 600px;">
+                                <img width="552"  src="https://i.ibb.co/n1wBTFY/punisher.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 552px;">
                             </td>
                         </tr>
                         <tr>
@@ -116,11 +114,11 @@
                                         <td>
                                             <div>
                                                 <!--[if mso]>
-                                                    <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:56px;v-text-anchor:middle; width:568px;" arcsize="18%" stroke="f" fillcolor="#2B2D42">
+                                                    <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:56px;v-text-anchor:middle; width:552px;" arcsize="0%" stroke="f" fillcolor="#2B2D42">
                                                         <w:anchorlock/>
                                                         <center>
                                                 <![endif]-->
-                                                        <a href="https://www.videogamer.com/news/the-punisher-season-3-predicted-release-date-leaks/" target="_blank" style="font-size: 16px; line-height:56px; font-weight:bold; letter-spacing: 2px; color:#EDF2F4; background-color:#2B2D42; display: inline-block; text-align:center; text-decoration:none; width: 100%;-webkit-text-size-adjust:none;">READ MORE</a>
+                                                        <a class="darkmode-btn" href="https://www.videogamer.com/news/the-punisher-season-3-predicted-release-date-leaks/" target="_blank" style="font-size: 16px; line-height:56px; font-weight:bold; letter-spacing: 2px; color:#EDF2F4; background-color: #2B2D42; display: inline-block; text-align:center; text-decoration:none; width: 100%;-webkit-text-size-adjust:none;">READ MORE</a>
                                                 <!--[if mso]>
                                                         </center>
                                                     </v:roundrect>
