--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                 .light-img { display:none; display:none !important; }
                     
                 /* Custom Dark Mode Background Color */
-                .darkmode       { background-color: #03051A !important; }
-                .darkmode-light { background-color: #17192E !important; }
+                .darkmode         { background-color: #03051A !important; }
+                .darkmode-light   { background-color: #17192E !important; }
+                .darkmode-lighter { background-color: #2B2D42 !important; }
 
                 /* Custom Dark Mode Background Header Color */
                 .darkmode-btn { background-color: #EDF2F4 !important; color: #17192E !important;}
@@ -67,6 +68,7 @@
         <!--[if (gte mso 9)|(IE)]>
             <style type="text/css">
                 body, table, td, p, a {font-family: sans-serif, Arial, Helvetica !important;}
+                a {text-decoration: none;}
             </style>
         <![endif]-->
         <table class="darkmode" role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%" height="100%" style="font-family: 'Inter', Helvetica, Arial, sans-serif;color: #2B2D42; background-color: #DDE0E1;">
@@ -86,7 +88,7 @@
                         </tr>
                         <!-- END of HEADER -->
 
-                         <!-- START of FIRST ARTICLE -->
+                         <!-- START of MAIN ARTICLE -->
                          <tr>
                             <td align="center" style="padding: 0 24px">
                                 <img width="552"  src="https://i.ibb.co/n1wBTFY/punisher.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 552px;">
@@ -129,14 +131,17 @@
                                 </table>
                             </td>
                         </tr>
-                        <!-- END of FIRST ARTICLE -->
+                        <!-- END of MAIN ARTICLE -->
 
                         
 
-                        <!-- SPACER -->
-                        <!-- <tr>
-                            <td height="88" style="font-size:88px; line-height: 88px;">&nbsp;</td>
-                        </tr> -->
+                        <!-- START of FEATURED ARTICLES HEADER -->
+                        <tr>
+                            <td class="darkmode-lighter"  style="background-color: #EDF2F4; padding: 24px;">
+                                <h2 style="margin: 0; padding: 0; font-size: 24px; font-weight: bold; line-height: 32px;">Featured Articles</h2>
+                            </td>
+                        </tr>
+                        <!-- END of FEATURED ARTICLES HEADER -->
                     </table>
                 </td>
             </tr>
