Add more you may like template

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                 .darkmode3 { background-color: #2B2D42 !important; }
 
                 /* Custom Dark Mode Font Colors */
-                h1, h2, h3, p, a { color: #EDF2F4 !important; }
+                h1, h2, h3, p { color: #EDF2F4 !important; }
 
                 /* Custom Dark Mode Text Link Color */
                 .link { color: #028383 !important; }
-                .footer a.link { color: #fdfdfd !important; }
+                /* .footer a.link { color: #fdfdfd !important; } */
             }
 
             /* Copy dark mode styles for android support */
@@ -530,6 +530,201 @@
                                             </td>
                                         </tr>
                                     </table>
+                                </td>
+                            </tr>
+                            <!-- END of TWO COLUMN LAYOUT -->
+
+                            <!-- START of FEATURED MORE HEADER -->
+                            <tr>
+                                <td class="darkmode2"  style="background-color: #ffffff; padding: 24px;">
+                                    <h2 style="margin: 0; padding: 0;font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 24px; line-height: 32px; color:#2B2D42;">More you may like</h2>
+                                </td>
+                            </tr>
+                            <!-- END of FEATURED MORE HEADER -->
+
+
+                            <!-- START of TWO COLUMN LAYOUT -->
+                            <tr>
+                                <td align="center" valign="top" style="padding: 0 24px 48px;">
+                                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                                          <tr>
+                                               <td align="center" valign="top" style="font-size:0;">
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 100%;">
+                                               <tr>
+                                               <td valign="top" style="width: 264px;">
+                                               <![endif]-->
+                                                    <div class="rPad-0" style="display:inline-block;vertical-align:top; padding-right: 24px;">
+                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
+                                                              <tr>
+                                                                   <td align="left" valign="top">
+                                                                        <img class="imgFull fadeimg" src="https://i.ibb.co/HHGkrVn/image-5.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                   </td>
+                                                              </tr>
+                                                         </table>
+                                                    </div>
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               </td><td valign="top" style="width:24px;">
+                                               </td><td valign="top" style="width:264px;">
+                                               <![endif]-->
+                                                    <div style="display:inline-block;vertical-align:top;">
+                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width:264px;">
+                                                            <tr>
+                                                                <td style="padding-top: 16px;">
+                                                                    <span  style="margin: 0; padding: 0; font-size: 12px; line-height: 16px; font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; letter-spacing: 3px; color: #D90429;">VIDEOGAMES</span>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 8px 0;">
+                                                                    <!--H3 heading-->
+                                                                    <h3 style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 20px; line-height: 32px; color:#2B2D42; margin:0; padding:0; text-align: left;">Who is Matt Ryan, the DoorDash driver turned Lakers sharpshooter?</h3>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="left" valign="top">
+                                                                    <!--Paragraph-->
+                                                                    <p style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Los Angeles Lakers were staring a 1-6 start in the face Wednesday as they trailed the...</p>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td style="padding-top: 8px;">
+                                                                    <a href="https://www.example.com{{utm_code}}" style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                                </td>
+                                                            </tr>
+                                                         </table>
+                                                    </div>
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               </td>
+                                               </tr>
+                                               </table>
+                                               <![endif]-->
+                                               </td>
+                                          </tr>
+                                     </table>
+                                </td>
+                            </tr>
+                            <!-- END of TWO COLUMN LAYOUT -->
+
+                            <!-- START of REVERSE TWO COLUMN LAYOUT -->
+                            <tr>
+                                <td align="center" valign="top" style="padding: 0 24px 48px;">
+                                     <!--2 column - image right (reverse stack)-->
+                                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                                          <tr>
+                                               <td align="center" valign="top" style="font-size:0;" dir="rtl">
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 100%;">
+                                               <tr>
+                                               <td valign="top" style="width: 264px;">
+                                               <![endif]-->
+                                                    <div class="lPad-0" style="display:inline-block;vertical-align:top; padding-left: 24px;">
+                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
+                                                              <tr>
+                                                                   <td align="left" valign="top">
+                                                                       <img class="imgFull" src="https://i.ibb.co/HHGkrVn/image-5.jpg" alt="Man holding flowers up to his face" width="264" height="264" style="font-size: 18px; line-height: 28px; color: #0a080b;">
+                                                                   </td>
+                                                              </tr>
+                                                         </table>
+                                                    </div>
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               </td><td valign="top" style="width:24px;">
+                                               </td><td valign="top" style="width:264px;">
+                                               <![endif]-->
+                                                    <div style="display:inline-block;vertical-align:top;">
+                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width:264px;">
+                                                                <tr>
+                                                                    <td style="padding-top: 16px;">
+                                                                        <span  style="margin: 0; padding: 0; font-size: 12px; line-height: 16px; font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; letter-spacing: 3px; color: #D90429;">VIDEOGAMES</span>
+                                                                    </td>
+                                                                </tr>
+                                                              <tr>
+                                                                   <td align="left" valign="top" style="padding: 8px 0;">
+                                                                        <!--H3 heading-->
+                                                                        <h3 style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 20px; line-height: 32px; color:#2B2D42; margin:0; padding:0; text-align: left;">Who is Matt Ryan, the DoorDash driver turned Lakers sharpshooter?</h3>
+                                                                   </td>
+                                                              </tr>
+                                                              <tr>
+                                                                   <td align="left" valign="top">
+                                                                        <!--Paragraph-->
+                                                                        <p style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Los Angeles Lakers were staring a 1-6 start in the face Wednesday as they trailed the...</p>
+                                                                   </td>
+                                                              </tr>
+                                                              <tr>
+                                                                <td style="padding-top: 8px;">
+                                                                    <a href="https://www.example.com{{utm_code}}" style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                                </td>
+                                                            </tr>
+                                                         </table>
+                                                    </div>
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               </td>
+                                               </tr>
+                                               </table>
+                                               <![endif]-->
+                                               </td>
+                                          </tr>
+                                     </table>
+                                </td>
+                           </tr>
+
+                            <!-- START of TWO COLUMN LAYOUT -->
+                            <tr>
+                                <td align="center" valign="top" style="padding: 0 24px 48px;">
+                                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                                          <tr>
+                                               <td align="center" valign="top" style="font-size:0;">
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 100%;">
+                                               <tr>
+                                               <td valign="top" style="width: 264px;">
+                                               <![endif]-->
+                                                    <div class="rPad-0" style="display:inline-block;vertical-align:top; padding-right: 24px;">
+                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
+                                                              <tr>
+                                                                   <td align="left" valign="top">
+                                                                        <img class="imgFull" src="https://i.ibb.co/HHGkrVn/image-5.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                   </td>
+                                                              </tr>
+                                                         </table>
+                                                    </div>
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               </td><td valign="top" style="width:24px;">
+                                               </td><td valign="top" style="width:264px;">
+                                               <![endif]-->
+                                                    <div style="display:inline-block;vertical-align:top;">
+                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width:264px;">
+                                                            <tr>
+                                                                <td style="padding-top: 16px;">
+                                                                    <span  style="margin: 0; padding: 0; font-size: 12px; line-height: 16px; font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; letter-spacing: 3px; color: #D90429;">VIDEOGAMES</span>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="center" valign="top" style="padding: 8px 0;">
+                                                                    <!--H3 heading-->
+                                                                    <h3 style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 20px; line-height: 32px; color:#2B2D42; margin:0; padding:0; text-align: left;">Who is Matt Ryan, the DoorDash driver turned Lakers sharpshooter?</h3>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td align="left" valign="top">
+                                                                    <!--Paragraph-->
+                                                                    <p style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Los Angeles Lakers were staring a 1-6 start in the face Wednesday as they trailed the...</p>
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td style="padding-top: 8px;">
+                                                                    <a href="https://www.example.com{{utm_code}}" style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                                </td>
+                                                            </tr>
+                                                         </table>
+                                                    </div>
+                                               <!--[if (gte mso 9)|(IE)]>
+                                               </td>
+                                               </tr>
+                                               </table>
+                                               <![endif]-->
+                                               </td>
+                                          </tr>
+                                     </table>
                                 </td>
                             </tr>
                             <!-- END of TWO COLUMN LAYOUT -->
