--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <table class="darkmode" role="presentation" cellpadding="0" cellspacing="0" border="0"  style="width:100%; background: #eeeeee;">
                 <!-- MAIN CONTENT -->
                 <tr>
-                    <td class="tPad-0" align="center" valign="top" style="padding-top: 20px;">
+                    <td class="tPad-0" align="center" valign="top" style="padding: 32px 0;">
                         <table class="w100p darkmode2" role="presentation" cellpadding="0" cellspacing="0" border="0" style="width:600px; background-color: #ffffff;">   
                             <!-- START of HEADER -->
                             <tr>
@@ -728,6 +728,37 @@
                                 </td>
                             </tr>
                             <!-- END of TWO COLUMN LAYOUT -->
+
+                            <!-- START of FOOTER -->
+                            <tr>
+                                <td class="darkmode3" style="padding: 16px 24px 24px; background-color: #EDF2F4;">
+                                    <table cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width:100%;">
+                                        <tr>
+                                            <td align="left">
+                                                <a class="light-img"  href="http://example.com" target="_blank" style="display: inline-block;">
+                                                    <img src="https://i.ibb.co/52n4Zmp/f-logo-light.png" width="140" alt="Daily Sentry Logo">
+                                                </a>
+                                                <a class="dark-img" href="http://example.com" target="_blank" style="display: none;">
+                                                    <img src="https://i.ibb.co/sP0NHNf/f-logo-dark.png" width="140" alt="Daily Sentry Logo">
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="left" valign="top" style="padding: 8px 0;">
+                                                <!--Paragraph-->
+                                                <p style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">You received this email because you are signed up to our news letter.</p>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="left">
+                                                <a href="https://example.com" target="_blank" style="font-family:'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Unsubscribe</a>
+                                            </td>
+                                        </tr>
+
+                                    </table>
+                                </td>
+                            </tr>
+                            <!-- END of FOOTER -->
                         </table>
                     </td>
                 </tr>
