Add footer address

--- a/index.html
+++ b/index.html
@@ -856,15 +856,16 @@
                                         <tr>
                                             <td align="left" valign="top" style="padding: 8px 0;">
                                                 <!--Paragraph-->
-                                                <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">You received this email because you are signed up to our news letter.</p>
+                                                <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 14px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">You received this email because you are signed up to our news letter. You can click the link below if you no longer wish to receive our emails.</p>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td align="left">
-                                                <a href="https://example.com" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Unsubscribe</a>
+                                                <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 14px; line-height: 24px; color:#2B2D42;">
+                                                    <a href="https://example.com" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Unsubscribe</a> | 1342 W Bash Ave, Nashville, TN 37011
+                                                </p>
                                             </td>
                                         </tr>
-
                                     </table>
                                 </td>
                             </tr>
