--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                                                          <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                        <img class="imgFull" src="https://i.ibb.co/Qb8hPMy/coin.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/5bf03966-9e4e-1ad1-1a19-815123beec40.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
                                                                    </td>
                                                               </tr>
                                                          </table>
