--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                                                         <tr>
                                                             <td align="left" valign="top" style="padding-bottom: 24px;">
                                                                 <!--Paragraph-->
-                                                                <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Los Angeles Lakers were staring a 1-6 start in the face Wednesday as they trailed the New Orleans Pelicans 111-108 with just 1.3 seconds remaining on the...</p>
+                                                                <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Los Angeles Lakers were staring a 1-6 start in the face Wednesday as they trailed the New Orleans Pelicans 111-108 with just 1.3 seconds remaining on the clock. Whom...</p>
                                                             </td>
                                                         </tr>
                                                         <tr>
