Fix header height for aol and yahoo

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <table class="w100p darkmode2" role="presentation" cellpadding="0" cellspacing="0" border="0" style="width:600px; background-color: #ffffff;">   
                             <!-- START of HEADER -->
                             <tr>
-                                <td align="left" style="width: 552px; height: 88px; padding: 0 24px;">
+                                <td align="left" height="88px" style="width: 552px; height: 88px; padding: 0 24px;">
                                     <a class="light-img"  href="http://example.com" target="_blank" style="display: inline-block;">
                                         <img src="https://i.ibb.co/xfKftRB/logo-light.png" width="186" alt="Daily Sentry Logo">
                                     </a>
