Update images urls

--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
                             <tr>
                                 <td align="left" height="88px" style="width: 552px; height: 88px; padding: 0 24px;">
                                     <a class="light-img"  href="http://example.com" target="_blank" style="display: inline-block;">
-                                        <img src="https://i.ibb.co/xfKftRB/logo-light.png" width="186" alt="Daily Sentry Logo">
+                                        <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/884ec297-f225-9ab2-b0d4-a4ae1d9da161.png" width="186" alt="Daily Sentry Logo">
                                     </a>
                                     <a class="dark-img" href="http://example.com" target="_blank" style="display: none;">
-                                        <img src="https://i.ibb.co/K0jNw5b/logo-dark.png" width="186" alt="Daily Sentry Logo">
+                                        <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/61d7f6b4-b16b-88ec-aeb3-edd5550b0162.png" width="186" alt="Daily Sentry Logo">
                                     </a>
                                 </td>
                             </tr>
@@ -367,7 +367,7 @@
                             <!-- START of MAIN ARTICLE -->
                             <tr>
                                 <td align="center" style="padding: 0 24px">
-                                    <img width="552"  src="https://i.ibb.co/n1wBTFY/punisher.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 552px;">
+                                    <img width="552"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/40a2f024-bc72-4c45-b4c4-5c43ae49f920.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 552px;">
                                 </td>
                             </tr>
                             <tr>
@@ -432,7 +432,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://i.ibb.co/XD3NmDf/tacoma.jpg" alt="woman with wreath of flowers on her head" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/a76b615a-8296-03dd-b6dc-bf2e8e7e5019.jpg" alt="woman with wreath of flowers on her head" width="264">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -479,7 +479,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://i.ibb.co/1rjqjbK/bike-woman.jpg" alt="man with tattoos holding flower up to his eye" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/f6c5f6a7-40ad-84d4-b324-83ed64cc34b7.jpg" alt="man with tattoos holding flower up to his eye" width="264">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -544,7 +544,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://i.ibb.co/pr0RWbb/forspoken.jpg" alt="woman with wreath of flowers on her head" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/a680feaa-a51c-285c-e736-b9c706d65f63.jpg" alt="woman with wreath of flowers on her head" width="264">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -591,7 +591,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://i.ibb.co/jLC7zk2/player.jpg" alt="man with tattoos holding flower up to his eye" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/1c75ecc0-24f2-0804-a661-4b3004efcc19.jpg" alt="man with tattoos holding flower up to his eye" width="264">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -665,7 +665,7 @@
                                                          <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                        <img class="imgFull" src="https://i.ibb.co/6b7hMK7/snow-owl.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/48855f45-9efe-a3b9-a0af-7872ced5a084.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
                                                                    </td>
                                                               </tr>
                                                          </table>
@@ -729,7 +729,7 @@
                                                          <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                       <img class="imgFull" src="https://i.ibb.co/Qb8hPMy/coin.jpg" alt="Man holding flowers up to his face" width="264" height="264" style="font-size: 18px; line-height: 28px; color: #0a080b;">
+                                                                       <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/0b314cfa-31b8-0058-ab12-e6c49a5b393a.jpg" alt="Man holding flowers up to his face" width="264" height="264" style="font-size: 18px; line-height: 28px; color: #0a080b;">
                                                                    </td>
                                                               </tr>
                                                          </table>
