--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 .darkmode3 { background-color: #2B2D42 !important; }
 
                 /* Custom Dark Mode Font Colors */
-                h1, h2, h3, p { color: #EDF2F4 !important; }
+                h1, h2, h3, p, img { color: #EDF2F4 !important; }
 
                 /* Custom Dark Mode Text Link Color */
                 .link { color: #028383 !important; }
@@ -367,7 +367,7 @@
                             <!-- START of MAIN ARTICLE -->
                             <tr>
                                 <td align="center" style="padding: 0 24px">
-                                    <img width="552"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/40a2f024-bc72-4c45-b4c4-5c43ae49f920.jpg" alt="" style="vertical-align: middle; width: 100%; max-width: 552px;">
+                                    <img width="552"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/40a2f024-bc72-4c45-b4c4-5c43ae49f920.jpg" alt="Jon Bernthal as Frank Castle AKA The Punisher" style="vertical-align: middle; width: 100%; max-width: 552px;">
                                 </td>
                             </tr>
                             <tr>
@@ -385,7 +385,7 @@
                                         </tr>
                                         <tr>
                                             <td style="padding-bottom: 24px">
-                                                <p  style="margin: 0; padding: 0; font-size: 18px; line-height: 32px; font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; color: #2B2D42;"">There has still been no news of a third season of The Punisher, despite rumours of it being unveiled at the D23 expo that happened earlier this year.</p>
+                                                <p  style="margin: 0; padding: 0; font-size: 18px; line-height: 32px; font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; color: #2B2D42;"">There has still been no news of a third season of The Punisher, despite rumour's of it being unveiled at the D23 expo that happened earlier this year.</p>
                                             </td>
                                         </tr>
                                         <tr>
@@ -432,7 +432,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/a76b615a-8296-03dd-b6dc-bf2e8e7e5019.jpg" alt="woman with wreath of flowers on her head" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/a76b615a-8296-03dd-b6dc-bf2e8e7e5019.jpg" alt="2022 Toyota Tacoma" width="264" style="font-size: 16px;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -479,7 +479,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/f6c5f6a7-40ad-84d4-b324-83ed64cc34b7.jpg" alt="man with tattoos holding flower up to his eye" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/f6c5f6a7-40ad-84d4-b324-83ed64cc34b7.jpg" alt="Woman sitting on motorcycle with her German Shepherd" width="264" style="font-size: 16px;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -544,7 +544,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/a680feaa-a51c-285c-e736-b9c706d65f63.jpg" alt="woman with wreath of flowers on her head" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/a680feaa-a51c-285c-e736-b9c706d65f63.jpg" alt="Forspoken main character Alfre Frey Holland" width="264" style="font-size: 16px;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -591,7 +591,7 @@
                                                     <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/1c75ecc0-24f2-0804-a661-4b3004efcc19.jpg" alt="man with tattoos holding flower up to his eye" width="264">
+                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/1c75ecc0-24f2-0804-a661-4b3004efcc19.jpg" alt="NBA player Matt Ryan staring at basket from free throw line" width="264" style="font-size: 16px;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -665,7 +665,7 @@
                                                          <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/48855f45-9efe-a3b9-a0af-7872ced5a084.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/48855f45-9efe-a3b9-a0af-7872ced5a084.jpg" alt="Snowy owl perched on roof" width="264" height="264" style="font-size: 16px;">
                                                                    </td>
                                                               </tr>
                                                          </table>
@@ -729,7 +729,7 @@
                                                          <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                       <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/0b314cfa-31b8-0058-ab12-e6c49a5b393a.jpg" alt="Man holding flowers up to his face" width="264" height="264" style="font-size: 18px; line-height: 28px; color: #0a080b;">
+                                                                       <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/0b314cfa-31b8-0058-ab12-e6c49a5b393a.jpg" alt="Aussie coins" width="264" height="264" style="font-size: 18px; line-height: 28px; color: #0a080b;">
                                                                    </td>
                                                               </tr>
                                                          </table>
@@ -791,7 +791,7 @@
                                                          <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/5bf03966-9e4e-1ad1-1a19-815123beec40.jpg" alt="Woman peering through stems of a plant" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/5bf03966-9e4e-1ad1-1a19-815123beec40.jpg" alt="Destny 2 titan, warlock, and hunter posing" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
                                                                    </td>
                                                               </tr>
                                                          </table>
